--- a/about.html
+++ b/about.html
@@ -115,7 +115,7 @@
         <h1>About Me</h1>
 
         <div class="markdown-body post-page">
-        <p><img src="media/15217455147270/blog_icon_240x240.jpg" alt="blog_icon_240x240"/></p>
+        <p><img src="media/15217455147270/blue_head_propic.jpg" alt="blue_head_propi" class="mw_img_center" style="width:280px;display: block; clear:both; margin: 0 auto;"/></p>
 
 <h2 id="toc_0">Carson Wah</h2>
 
