Add google analytics code

--- a/about.html
+++ b/about.html
@@ -183,7 +183,15 @@ s.src = '//' + disqus_shortname + '.disqus.com/count.js';
 
     
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-111343902-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'UA-111343902-1');
+</script>
 
   </body>
 </html>
