--- a/15221461803635.html
+++ b/15221461803635.html
@@ -3,6 +3,17 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/asset/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/asset/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/asset/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/asset/favicon/site.webmanifest">
+    <link rel="mask-icon" href="/asset/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="/asset/favicon/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="/asset/favicon/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
+    <!-- /Favicon -->
     <title>
     
   React Native教學 - Part 1 詳盡新手入門 - Carson's Tech Note
@@ -21,13 +32,13 @@
   gtag('config', 'UA-111343902-1');
 </script>
   
-  <link href="atom.xml" rel="alternate" title="Carson's Tech Note" type="application/atom+xml" />
-  <link rel="stylesheet" href="asset/css/foundation.min.css" />
-  <link rel="stylesheet" href="asset/css/docs.css" />
-  <script src="asset/js/vendor/modernizr.js"></script>
-  <script src="asset/js/vendor/jquery.js"></script>
+  <link href="atom.xml" rel="alternate" title="Carson's Tech Note" type="application/atom+xml">
+    <link rel="stylesheet" href="asset/css/foundation.min.css" />
+    <link rel="stylesheet" href="asset/css/docs.css" />
+    <script src="asset/js/vendor/modernizr.js"></script>
+    <script src="asset/js/vendor/jquery.js"></script>
   <script src="asset/highlightjs/highlight.pack.js"></script>
-  <link href="asset/highlightjs/styles/github.css" media="screen, projection" rel="stylesheet" type="text/css" />
+  <link href="asset/highlightjs/styles/github.css" media="screen, projection" rel="stylesheet" type="text/css">
   <script>hljs.initHighlightingOnLoad();</script>
 <script type="text/javascript">
   function before_search(){
@@ -309,9 +320,9 @@ npm start
 <p>日後如果真的需要加入native code的話，可以選擇<strong>detach</strong>。Detach後會出現<code>ios</code>和<code>android</code>的Native project，你可以fully customize它們，裡面default會使用Expo的方法來運行你的<code>App.js</code>。</p>
 
 <ul>
+<li><a href="https://docs.expo.io/versions/latest/expokit/expokit">可以透過ExpoKit來使用本來Expo的功能</a></li>
 <li><a href="https://forums.expo.io/t/is-ota-js-update-still-available-after-detaching/8661">OTA JS Update still available</a></li>
 <li><a href="https://forums.expo.io/t/is-it-possible-to-undetach-a-project/8660/2">可以undetach</a></li>
-<li><a href="https://docs.expo.io/versions/latest/expokit/expokit">可以透過ExpoKit來使用本來Expo的功能</a></li>
 </ul>
 
 <h2 id="toc_17">Notes</h2>
