--- a/15213187969126.html
+++ b/15213187969126.html
@@ -227,7 +227,7 @@ echo &#39;theme = &quot;ananke&quot;&#39; &gt;&gt; config.toml # 在config中設
 
 <p>大概是這個樣子：</p>
 
-<p><img src="/images/blogging/new-hugo.png" alt="New hugo site"/></p>
+<p><img src="media/15213187969126/new_hugo.png" alt="new_hugo"/></p>
 
 <p>下次再寫更多關於theme、configuration和如何deploy到github吧！</p>
 
