--- a/2018-03-28-react-native-part3-component.html
+++ b/2018-03-28-react-native-part3-component.html
@@ -213,7 +213,7 @@ class WhyReactNativeIsSoGreat extends Component {
 
 <ul>
 <li>Component多數以<strong>JSX</strong> declare</li>
-<li><em><code>render()</code>只能return一個Component，如果要多於一個，需要用一個<View>來打包</em></li>
+<li><em><code>render()</code>只能return一個Component，如果要多於一個，需要用一個<code>&lt;View&gt;</code>來打包</em></li>
 </ul></li>
 </ul>
 
