--- a/15221461803635.html
+++ b/15221461803635.html
@@ -206,7 +206,7 @@
 <p>先簡單講一開始怎樣選擇版本，詳細的決定還是要自己試一次才知道。</p>
 
 <ul>
-<li>如果你只是係體驗一下React Native、在Sample Project裡隨便玩玩，請選擇<strong>CRNA版</strong>。</li>
+<li>如果你只是體驗一下React Native、在Sample Project裡隨便玩玩，請選擇<strong>CRNA版</strong>。</li>
 <li>如果你要快速開發跨平台App、不需要太多Native功能如Background Location、不需要用<code>react-native link</code>的3rd-party libraries、不需要改xcode或android的project setting，請用<strong>Expo版</strong>。</li>
 <li>如果你需要用到以上功能，請用<strong>傳統Native版</strong>。</li>
 </ul>
