--- a/factory-design-pattern.html
+++ b/factory-design-pattern.html
@@ -268,7 +268,7 @@ ConcreteCreator creator = new ConcreteCreator();
 Product product = creator.createProduct();
 </code></pre>
 
-<p>雖然這也算是<strong>Abstract Factory</strong>，但在定義上它比<strong>Factory Method</strong>更著重工廠可以製造&quot;families of related objects&quot;，詳見下文。</p>
+<p>雖然這也算是<strong>Abstract Factory</strong>，但在定義上Abstract Factory比<strong>Factory Method</strong>更著重工廠可以製造&quot;families of related objects&quot;，詳見下文。</p>
 
 <h3 id="toc_8">3. Abstract Factory Pattern</h3>
 
