--- a/laravel-part1-basics.html
+++ b/laravel-part1-basics.html
@@ -175,6 +175,8 @@
 </ul></li>
 </ul>
 
+<p><a href="https://laravel.com/docs/5.6/routing">官方Routing Doc</a></p>
+
 <h2 id="toc_1">Request &amp; Response</h2>
 
 <h3 id="toc_2">Callback function</h3>
