Update about page

--- a/about.html
+++ b/about.html
@@ -139,15 +139,84 @@
         <h1>About Me</h1>
 
         <div class="markdown-body post-page">
-        <p><img src="media/15217455147270/blue_head_propic.jpg" alt="blue_head_propi" class="mw_img_center" style="width:280px;display: block; clear:both; margin: 0 auto;"/></p>
+        <h2 id="toc_0">Carson Wah</h2>
 
-<h2 id="toc_0">Carson Wah</h2>
+<p><img src="media/15217455147270/blue_head_propic.jpg" alt="blue_head_propi" class="mw_img_center" style="width:280px;display: block; clear:both; margin: 0 auto;"/></p>
 
-<p>An explorer, expeditioner.</p>
+<p>An expeditioner, messing around with web technology and data science.</p>
 
-<p>Focusing on web technology and data science.</p>
+<p>Below are some of the things in which I have experience.</p>
 
-<p>Languages: Javascript, Python, Swift, C, Java, R, Ruby, PHP</p>
+<h3 id="toc_1">Languages</h3>
+
+<ul>
+<li>Javascript</li>
+<li>Python</li>
+<li>Swift</li>
+<li>C</li>
+<li>Java</li>
+<li>R</li>
+<li>Ruby</li>
+<li>PHP</li>
+</ul>
+
+<h3 id="toc_2">Web/Mobile Development</h3>
+
+<h4 id="toc_3">Frontend</h4>
+
+<ul>
+<li>Reactjs</li>
+<li>Vue.js</li>
+<li>Angular 1 (yay, 1 only ┐(´д`)┌ )</li>
+<li>HTML, CSS, jQuery, blahblahblah</li>
+</ul>
+
+<h4 id="toc_4">Backend</h4>
+
+<ul>
+<li>Google App Engine</li>
+<li>Node.js with express</li>
+<li>Django</li>
+<li>Flask</li>
+<li>Ruby on Rails</li>
+<li>Laravel</li>
+</ul>
+
+<h4 id="toc_5">Mobile</h4>
+
+<ul>
+<li>React Native</li>
+<li>Native iOS</li>
+<li>Native Android</li>
+</ul>
+
+<h3 id="toc_6">Data Science Tools</h3>
+
+<h4 id="toc_7">Machine Learning</h4>
+
+<ul>
+<li>Scikit Learn</li>
+<li>Keras</li>
+<li>Tensorflow</li>
+<li>Caffe</li>
+<li>NLTK</li>
+</ul>
+
+<h4 id="toc_8">Big Data</h4>
+
+<ul>
+<li>Apache HDFS</li>
+<li>Apache Hadoop</li>
+<li>Apache Storm</li>
+<li>Apache Spark</li>
+<li>Apache Mesos</li>
+<li>Apache Zookeeper</li>
+<li>Pig/Hive</li>
+</ul>
+
+<h3 id="toc_9">Open source project</h3>
+
+<p><a href="https://github.com/carsonwah/react-native-push-notification-popup">carsonwah/react-native-push-notification-popup</a></p>
 
         </div>
     </div>
