--- a/about.html
+++ b/about.html
@@ -186,8 +186,8 @@
 
 <ul>
 <li>React Native</li>
-<li>Native iOS</li>
-<li>Native Android</li>
+<li>iOS with Swift</li>
+<li>Android with Java</li>
 </ul>
 
 <h3 id="toc_6">Data Science Tools</h3>
