--- a/about.html
+++ b/about.html
@@ -211,7 +211,7 @@
 <li>Apache Spark</li>
 <li>Apache Mesos</li>
 <li>Apache Zookeeper</li>
-<li>Pig/Hive</li>
+<li>Apache Pig/Hive</li>
 </ul>
 
 <h3 id="toc_9">Open source project</h3>
