--- a/15213187968335.html
+++ b/15213187968335.html
@@ -375,7 +375,7 @@ class RouteDetailViewController: UIViewController {
         <p class="text-left" style="padding:15px 0px;">
       
           <a href="2018-03-18-react-native-handling-permissions.html" 
-          title="Previous Post: 在React Native處理Permissions">&laquo; 在React Native處理Permissions</a>
+          title="Previous Post: React Native - 處理User Permission">&laquo; React Native - 處理User Permission</a>
       
         </p>
         </div>
