--- a/15221461803635.html
+++ b/15221461803635.html
@@ -469,7 +469,7 @@ npm start
       <p class="text-right" style="padding:15px 0px;">
       
           <a  href="2018-03-18-react-native-handling-permissions.html" 
-          title="Next Post: 在React Native處理Permissions">在React Native處理Permissions &raquo;</a>
+          title="Next Post: React Native - 處理User Permission">React Native - 處理User Permission &raquo;</a>
       
       </p>
         </div>
