--- a/react-native.html
+++ b/react-native.html
@@ -470,7 +470,7 @@
 			<div class="article">
                 <a class="clearlink" href="2018-03-18-react-native-handling-permissions.html">
                 
-                  <h1>在React Native處理Permissions</h1>
+                  <h1>React Native - 處理User Permission</h1>
                   <div class="a-content">
                       
                       <div class="a-content-text">
